<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#A1A9BA" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/bt_transition_session_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_register"/>

        <Button
            android:id="@+id/bt_transition_session_inquiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_inquiry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/bt_transition_player_inquiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_inquiry"/>

        <Button
            android:id="@+id/bt_transition_configuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuration"/>
    </LinearLayout>

</LinearLayout>